More single entry-header spacing fixes

--- a/sass/_event.scss
+++ b/sass/_event.scss
@@ -407,6 +407,7 @@
         
         article {
             padding: 0;
+            margin-bottom: 0;
         }
         
     } // .content
@@ -439,7 +440,7 @@
             @media only screen and (max-width: $breakpoint-medium) {
                 float: none;
                 width: 100%;
-                margin: ($space-default-half + 10px) 0 $space-default-half 0;
+                margin-top: $space-default;
                 clear: both;
                 text-align: left;
             }
